<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2012 SINTEF <fabien@fleurey.com>

    Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.gnu.org/licenses/lgpl-3.0.txt

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<resources>

   	<string name="hello">Hello World, SensApp!</string>
	<string name="app_name">SensApp</string>
	<string name="no_measures">Currently there are no measures maintained</string>
	<string name="no_sensors">Currently there are no sensors maintained</string>
	<string name="no_composites">Currently there are no composites maintained</string>
	<string name="menu_insert">Add Item</string>
	<string name="menu_delete">Delete measure</string>
	<string name="measure_id">Id: </string>
	<string name="measure_sensor">Sensor</string>
	<string name="measure_value">Value</string>
	<string name="measure_basetime">Basetime: </string>
	<string name="measure_time">Time: </string>
	<string name="measure_status">Status: </string>
	<string name="measure_uploaded">Uploaded</string>
	<string name="measure_notuploaded">Not uploaded</string>
	<string name="toast_service_started">SensApp service started</string>
	<string name="toast_service_stopped">SensApp service stopped</string>
	<string name="status_icon_description">status_icon_description</string>
    <string name="pref_category">pref_category</string>
	<string name="pref_auto_upload_key">pref_auto_upload_key</string>
	<string name="pref_choose_sensor_autoupload_key">pref_choose_sensor_autoupload_key</string>
    <string name="pref_autoupload_amount_key">pref_autoupload_amount_key_new</string>
	<string name="pref_autoupload_delay_key">pref_autoupload_delay_key</string>
	<string name="pref_default_server_key">pref_default_server_key</string>
	<string name="pref_default_port_key">pref_default_port_key</string>
	<string name="pref_server_default_value">http://mysensapp.org</string>
	<string name="pref_undo_upload_key">pref_undo_upload_key</string>
	<string name="measure_icon_description">measure icon</string>
	<string name="sensor_icon_description">sensor icon</string>
    <string name="details_icon_description">Details activity icon descriptor</string>
	
</resources>