<!--

    Copyright (C) 2012 SINTEF <fabien@fleurey.com>

    Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.gnu.org/licenses/lgpl-3.0.txt

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Auto upload">
        <CheckBoxPreference
            android:key="@string/pref_auto_upload_key"
            android:title="Active"
            android:defaultValue="false"/>

            <EditTextPreference
                android:key="@string/pref_autoupload_delay_key"
                android:title="Interval"
                android:dialogTitle="Set the delay between two upload"
                android:numeric="integer"
                android:defaultValue="10"/>
            <Preference
                android:key="@string/pref_choose_sensor_autoupload_key"
                android:title="Sensors"
                android:summary="Choose sensors to auto upload"/>

            <EditTextPreference
                android:key="@string/pref_autoupload_amount_key"
                android:title="Amount of data"
                android:dialogTitle="Set the amount of data stored between two upload"
                android:numeric="integer"
                android:defaultValue="1000"/>
    

    </PreferenceCategory>
    
    <PreferenceCategory android:title="Reset">
        <Preference
            android:key="@string/pref_undo_upload_key"
            android:title="Undo uploaded entities"/>
    </PreferenceCategory>
</PreferenceScreen>