<!--

    Copyright (C) 2012 SINTEF <fabien@fleurey.com>

    Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.gnu.org/licenses/lgpl-3.0.txt

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="SensApp web instance">
    
        <org.sensapp.android.sensappdroid.preferences.EditTextServerPreference 
            android:key="@string/pref_default_server_key"
            android:title="Default server"
            android:dialogTitle="Set the default SensApp server"
            android:summary="Set the default SensApp server"
            android:defaultValue="@string/pref_server_default_value"/>
    
    <EditTextPreference
                android:key="@string/pref_default_port_key"
                android:title="Default port"
                android:dialogTitle="Enter the default server port"
                android:numeric="integer"
                android:defaultValue="80" />

    </PreferenceCategory>
</PreferenceScreen>