<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2012 SINTEF <fabien@fleurey.com>

    Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.gnu.org/licenses/lgpl-3.0.txt

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.

-->
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/measure_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/measure_sensor" />
        
    <TextView 
        android:id="@+id/measure_sensor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/measure_sensor" />
    
    <TextView 
        android:id="@+id/measure_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:layout_below="@id/measure_sensor_value"
        android:text="@string/measure_id" />
        
    <TextView 
        android:id="@+id/measure_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_toRightOf="@id/measure_id" 
        android:layout_alignBottom="@id/measure_id"/>
    
    <TextView 
        android:id="@+id/measure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/measure_id"
        android:layout_alignRight="@id/measure_id"
        android:text="@string/measure_time" />
        
    <TextView 
        android:id="@+id/measure_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
		android:layout_alignBottom="@id/measure_time"
        android:layout_alignLeft="@id/measure_id_value" />
    
    <TextView 
        android:id="@+id/measure_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/measure_time"
        android:layout_alignRight="@id/measure_id"
        android:text="@string/measure_status" />
        
    <TextView 
        android:id="@+id/measure_status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
		android:layout_alignBottom="@id/measure_status"
        android:layout_alignLeft="@id/measure_id_value" />
    
    <TextView 
        android:id="@+id/measure_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:paddingTop="50dp"
        android:paddingRight="30dp"
        android:layout_alignTop="@id/measure_id"
        android:layout_alignParentRight="true"
        android:text="@string/measure_value" />
        
    <TextView 
        android:id="@+id/measure_value_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:layout_below="@id/measure_value"
        android:layout_alignParentRight="true" />
    
</RelativeLayout>